--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-new-project",
   "type": "module",
   "devDependencies": {
+    "@types/assert-plus": "^1.0.6",
     "@wdio/cli": "^8.16.11",
     "@wdio/cucumber-framework": "^8.16.11",
     "@wdio/local-runner": "^8.16.11",
@@ -9,5 +10,9 @@
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.js"
+  },
+  "dependencies": {
+    "chromedriver": "^117.0.2",
+    "testng": "^0.0.1"
   }
 }
